@@ -2,25 +2,23 @@ package com.aidatynybekkyzy.clothshop.service.impl;
 
 import com.aidatynybekkyzy.clothshop.dto.CategoryDto;
 import com.aidatynybekkyzy.clothshop.dto.ProductDto;
-import com.aidatynybekkyzy.clothshop.exception.EntityNotFoundException;
 import com.aidatynybekkyzy.clothshop.exception.EntityAlreadyExistsException;
+import com.aidatynybekkyzy.clothshop.exception.EntityNotFoundException;
 import com.aidatynybekkyzy.clothshop.exception.InvalidArgumentException;
 import com.aidatynybekkyzy.clothshop.mapper.CategoryMapper;
 import com.aidatynybekkyzy.clothshop.mapper.ProductMapper;
 import com.aidatynybekkyzy.clothshop.model.Category;
 import com.aidatynybekkyzy.clothshop.model.Product;
 import com.aidatynybekkyzy.clothshop.repository.CategoryRepository;
-import com.aidatynybekkyzy.clothshop.security.LogoutService;
 import com.aidatynybekkyzy.clothshop.service.CategoryService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
-
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -28,29 +26,27 @@ public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final CategoryMapper categoryMapper;
     private final ProductMapper productMapper;
-    private final LogoutService logoutService;
 
     @Autowired
-    public CategoryServiceImpl(CategoryRepository categoryRepository, CategoryMapper categoryMapper, ProductMapper productMapper, LogoutService logoutService) {
+    public CategoryServiceImpl(CategoryRepository categoryRepository,
+                               CategoryMapper categoryMapper,
+                               ProductMapper productMapper) {
         this.categoryRepository = categoryRepository;
         this.categoryMapper = categoryMapper;
         this.productMapper = productMapper;
-        this.logoutService = logoutService;
     }
 
-    @Override //todo categoryId returns null instead of actualID
+    @Override
+    @Transactional
     public CategoryDto createCategory(CategoryDto categoryDto) {
-
-        Category category = categoryMapper.toEntity(categoryDto);
-
-        if (category.getCategoryName() == null || category.getCategoryName().isEmpty()) {
+        if (categoryDto.getCategoryName() == null || categoryDto.getCategoryName().isEmpty()) {
             throw new InvalidArgumentException("Category name is required");
         }
+        Category category = categoryMapper.toEntity(categoryDto);
+
         if (categoryRepository.existsByCategoryName(category.getCategoryName())) {
             throw new EntityAlreadyExistsException("Category already exists with name: " + category.getCategoryName());
         }
-        Long categoryId = categoryDto.getId();
-        category.setId(categoryId);
 
         Category savedCategory = categoryRepository.save(category);
         return categoryMapper.toDto(savedCategory);
@@ -58,16 +54,18 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     @CacheEvict(value = "productsCaсhe", key = "#categoryId")
+    @Transactional
     public List<ProductDto> getAllProductsByCategoryId(Long categoryId) {
         Category category = categoryMapper.toEntity(getCategoryById(categoryId));
 
         List<Product> products = category.getProducts();
         return products.stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public CategoryDto getCategoryById(Long id) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + id));
@@ -76,15 +74,17 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     @Cacheable(value = "categoriesCache")
+    @Transactional
     public List<CategoryDto> getAllCategories() {
         List<Category> categories = categoryRepository.findAll();
         return categories.stream()
                 .map(categoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Cacheable(value = "categoriesCache", key = "#id")
+    @Transactional
     public CategoryDto updateCategory(Long id, CategoryDto categoryDto) {
         log.info("Updating category with id: " + id + " " + categoryDto.toString());
         Category category = categoryMapper.toEntity(getCategoryById(id));
@@ -94,9 +94,6 @@ public class CategoryServiceImpl implements CategoryService {
         }
 
         category.setCategoryName(categoryDto.getCategoryName());
-        /*category.setProducts(categoryDto.getProducts().stream()
-                .map(productMapper::toEntity)
-                .collect(Collectors.toList()));*/
 
         Category updatedCategory = categoryRepository.save(category);
         log.info("updated Category: " + updatedCategory.toString());
@@ -105,6 +102,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     @CacheEvict(value = "categoriesCache", key = "#id")
+    @Transactional
     public void deleteCategory(Long id) {
         if (!categoryRepository.existsById(id)) {
             throw new EntityNotFoundException("Category not found with id: " + id);
